express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tidus
spec:
  selector:
    matchLabels:
      app: tidus
  replicas: 2
  template:
    metadata:
      labels:
        app: tidus
    spec:
      containers:
        - name: cars-api
          image: dmiller94/scalable-api-example:latest
          ports:
            - containerPort: 4000
