express-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yuna
spec:
  selector:
    app: tidus
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
