express-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lulu
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: api.jdmcarshop.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yuna
                port:
                  number: 4000
